refactor: give a page level call nothing to run on, the way an element call gives the element
Page.executeJs(Class) put the UI's element where a call made on an element
puts the element, so declared page JavaScript ran with the body as `this`.
It now puts nothing there, which is what page JavaScript addressing the window
means, and the MPR push state does the same. The client applies the function
to it either way.

This is the shape feat/js-invoker-for-page gives the same method, so whichever
of the two lands first the other is no longer a second design for it.